# plasma6-applet-eventcalendar

./: .gitignore  CMakeLists.txt  ReadMe.md  build  install.sh  uninstall
helper/: eventcalendar_google_oauth.cpp
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AgendaEventItem.qml  AgendaListItem.qml  AgendaTaskItem.qml  AgendaView.qml  AppletConfig.qml  ClockView.qml  ConfigMigration.qml  DateSelector.qml  DateTimeSelector.qml  DayDelegate.qml  DaysCalendar.qml  EditEventForm.qml  EditTaskForm.qml  EventPropertyIcon.qml  FontIcon.qml  LinkRect.qml  LinkText.qml  Logic.qml  MeteogramView.qml  MonthView.qml  NetworkMonitor.qml  NetworkMonitorPlasmaNM.qml  NewEventForm.qml  NotificationManager.qml  PopupView.qml  TimeFormatSizeHelper.qml  TimeModel.qml  TimeSelector.qml  TimerView.qml  TooltipView.qml  UpcomingEvents.qml  main.qml
package/contents/ui/badges/: DotsBadge.qml  EventColorsBarBadge.qml  EventCountBadge.qml  HighlightBarBadge.qml
package/contents/ui/calendars/: CalendarManager.qml  DebugCalendarManager.qml  GoogleApiSession.qml  GoogleCalendarManager.qml  GoogleTasksManager.qml  ICalManager.qml  PlasmaCalendarManager.qml  PlasmaCalendarUtils.js
package/contents/ui/config/: ColorTextButton.qml  ConfigAgenda.qml  ConfigCalendar.qml  ConfigEvents.qml  ConfigGeneral.qml  ConfigGoogleCalendar.qml  ConfigICal.qml  ConfigLayout.qml  ConfigSerializedString.qml  ConfigTimezones.qml  ConfigWeather.qml  GoogleLoginManager.qml  OpenMeteoLocationDialog.qml
package/contents/ui/lib/: Base64Json.qml  ColorGrid.qml  (+17 more)
(+83 files in other folders)
